# BreastCal

./: .gitignore  CMakeLists.txt  CoincEvent.h  DictOutput.h  LinkDef.h  Makefile  ModuleCal.C  ModuleCal.h  ModuleDat.C  ModuleDatDict.C  ModuleDatDict.h  MyDict.C  MyDict.h  anafloods_psf_v2.C  apd_fit.C  apd_fit.h  apd_peaktovalley.C  apd_peaktovalley.h  apd_sort16.h  apd_sort16_v2.C  chain_merged.C  chain_parsed.C  config.cpp  config.h  decoder.C  decoder.cpp  decoder.h  detCluster.C  detCluster.h  enecal.C  enecal_psf.C  enefit.C  findnext.C  findnext.h  fom_ana.C  get_opt_split.C  getfloods.C  glob_fit_results.C  merge_4up.C  merge_ana.C  (+8 more)
DOC/: README  SAVE.fig  SAVE.fig.bak  SW_Scheme.aux  SW_Scheme.eps  SW_Scheme.fig  SW_Scheme.fig.bak  SW_Scheme.tex  SW_Scheme.toc
PAR/: MakePAR.sh  ModuleDatDict.par  Sel_Calibrator.par  Sel_GetEhis.par  Sel_GetFloods.par
PAR/ModuleDatDict/PROOF_INF/: SETUP.C
PAR/Sel_Calibrator/: Sel_Calibrator.cc  Sel_Calibrator.h
PAR/Sel_Calibrator/PROOF-INF/: SETUP.C
PAR/Sel_GetEhis/: Sel_GetEhis.cc  Sel_GetEhis.h
PAR/Sel_GetEhis/PROOF-INF/: SETUP.C
PAR/Sel_GetFloods/: Sel_GetFloods.cc  Sel_GetFloods.h
PAR/Sel_GetFloods/PROOF-INF/: SETUP.C
UTILS/: dumpcudaformat.sh
UTILS/GENSORT/: Makefile  calc_average  calc_average.C
anascripts/: CompareCrystals.sh  cryscal.C  fit_tspec.C  pattern.C  pedana.sh  plot_cartridge_glob.C  plot_glob.C  plot_pedestal.C  tresfit.C  tspecfit.C
calc_uv/: calc_uv.pro
calibrate/: calibrate.cpp  calibrate.pro
decode/: decode.cpp  decode.pro
fill_floods/: fill_floods.pro
fit_floods/: fit_floods.cpp  fit_floods.pro  segmentation.cpp  segmentation.h
get_apd_photopeaks/: get_apd_photopeaks.pro
get_crystal_photopeaks/: get_crystal_photopeaks.cpp  get_crystal_photopeaks.pro
include/: Apd_Fit.h  Apd_Sort16_v2.h  Cluster.h  CoincEvent.h  DetCluster.h  EventCal.h  EventCoinc.h  FindNext.h  Kmeans.h  LinkDef.h  ModuleCal.h  ModuleDat.h  PPeaks.h  PixelCal.h  Sel_Calibrator.h  Sel_GetEhis.h  Sel_GetFloods.h  Syspardef.h  ana_pardef.h  cal_helper_functions.h  calibrate.h  calibrationdata.h  chipevent.h  daqboardmap.h  daqpacket.h  decoder.h  decoderlib.h  detCluster.h  enecal.h  enefit.h  eventcal.h  format_recon.h  format_recon_dca_ana.h  getfloods.h  renachip.h  rootplotter.h  sorting.h  writefloodmap.h
nfo/: DAQ_Board_Map.nfo
pedestals/: pedestals.cpp  pedestals.pro
qmake/: BreastCal.pro
qmake/calc_uv/: calc_uv.cpp  calc_uv.pro
qmake/calibrate/: calibrate.cpp  calibrate.pro
qmake/decode/: decode.pro
qmake/fill_energy/: fill_energy.cpp  fill_energy.pro
qmake/fill_floods/: fill_floods.cpp  fill_floods.pro
qmake/fit_floods/: fit_floods.cpp  fit_floods.pro  segmentation.cpp
qmake/get_apd_photopeaks/: get_apd_photopeaks.cpp  get_apd_photopeaks.pro
qmake/get_crystal_photopeaks/: get_crystal_photopeaks.cpp  get_crystal_photopeaks.pro
qmake/pedestals/: pedestals.cpp  pedestals.pro
qmake/sort_coinc/: sort_coinc.cpp  sort_coinc.pro
qmake/tcal_apd_offset/: tcal_apd_offset.cpp  tcal_apd_offset.pro
qmake/tcal_crystal_offset/: tcal_crystal_offset.pro
qmake/tcal_edep_offset/: tcal_edep_offset.pro
qmake/view_cal/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  view_cal.pro
sort_coinc/: sort_coinc.cpp  sort_coinc.pro
src/: Apd_Fit.C  Apd_Fit.cc  Apd_Peaktovalley.C  Apd_Sort16_v2.C  CMakeLists.txt  Cluster.C  CoincEvent.C  Config.C  DetCluster.C  DictOutput.C  EventCal.cc  EventCoinc.cc  FindNext.C  Kmeans.C  ModuleCal.cc  PPeaks.cc  PixelCal.cc  Sel_Calibrator.cc  Sel_GetEhis.cc  Sel_GetFloods.cc  Util.C  addtopath.sh  anafloods_psf_v2.C  apd_peaktovalley.C  apd_sort16_v2.C  cal_apd_offset.C  cal_crystal_offset1.C  cal_crystal_offset2.C  cal_edep.C  cal_edep_apd.C  cal_edep_crystal.C  cal_ft_offset.C  cal_helper_functions.cc  cal_ls_apd_offset.C  calibrate.C  calibrate_file.C  calibrationdata.cc  chain_cal.C  chain_list.C  chain_merged.C  (+42 more)
tcal_apd_offset/: tcal_apd_offset.pro
tcal_crystal_offset/: tcal_crystal_offset.cpp  tcal_crystal_offset.pro
tcal_edep_offset/: tcal_edep_offset.cpp  tcal_edep_offset.pro
view_cal/: mainwindow.cpp  view_cal.pro
